# risk-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  partially-implemented-plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: quality-gates.yml
blueprint/: 00-overview.md  01-architecture.md  01-stack.md  02-data-model.md  02-environment.md  03-architecture.md  03-repl-ux.md  04-data-model.md  05-enums.md  06-cli-reference.md  07-operations-patterns.md  08-code-quality.md  09-semver.md  10-persistence-layer.md  11-repl-ux.md
lib/: dmta_cli-0.1.1-py3-none-any.whl
src/governance_cli/: __init__.py  __main__.py
src/governance_cli/config/: __init__.py  settings.py
src/governance_cli/database/: __init__.py
src/governance_cli/model/: __init__.py  enums.py  tables.py
src/governance_cli/operations/: __init__.py  component_operations.py  component_salt_operations.py  counterion_operations.py  manufacturing_process_risk_operations.py  project_operations.py  stage_component_operations.py  stage_operations.py
src/governance_cli/repl/: __init__.py  commands.py  context.py  list_navigator.py  loop.py  screen.py  session_state.py
src/governance_cli/repl/renderers/: __init__.py  admin_renderer.py  route_renderer.py
src/governance_cli/schema/: __init__.py  create.py  update.py
src/governance_cli/service/: dmta_service.py  smiles_comparison_result.py
src/governance_cli/utils/: __init__.py  formula_parser.py  parsing.py
src/riskmanager_cli/: __init__.py  __main__.py
src/riskmanager_cli/config/: __init__.py  settings.py
src/riskmanager_cli/data/: __init__.py
src/riskmanager_cli/data/seed/: __init__.py  counterions.json  example_project.json  example_project_osimertinib.json  ncrm.json
src/riskmanager_cli/database/: __init__.py  connection.py  db_session.py  exceptions.py
src/riskmanager_cli/model/: __init__.py  enums.py  severity.py  tables.py
src/riskmanager_cli/operations/: __init__.py  base_operations.py  component_operations.py  component_risks_operations.py  component_salt_operations.py  counterion_operations.py  dmta_operations.py  manufacturing_process_operations.py  manufacturing_process_risk_operations.py  material_operations.py  ncrm_library_operations.py  project_operations.py  seed_operations.py  smiles_operations.py  stage_component_operations.py  stage_ncrm_operations.py  stage_operations.py  stage_risk_operations.py  visualization_operations.py
src/riskmanager_cli/repl/: __init__.py  bootstrap.py  commands.py  context.py  entity_flows.py  escape_handler.py  form_fields.py  hotkeys.py  list_navigator.py  lookup.py  loop.py  picker_items.py  risk_flows.py  risk_forms.py  screen.py  sticky_window.py  viewport.py
src/riskmanager_cli/repl/renderers/: _sections.py  blocks.py  box.py  component_renderer.py  home_renderer.py  library_home_renderer.py  library_renderer.py  project_renderer.py  risk_renderer.py  route_renderer.py  stage_renderer.py  tables.py
src/riskmanager_cli/repl/renderers/layout/: __init__.py  geometry.py  stacks.py
src/riskmanager_cli/repl/screens/: __init__.py  admin.py  base.py  component_focus.py  focus_base.py  home.py  legacy.py  library.py  library_subsections.py  project.py  project_select.py  risk_mode.py  route.py  route_select.py  specs.py  stage_focus.py
src/riskmanager_cli/repl_engine/: __init__.py  controller.py  dispatch.py  forms.py  keys.py  list_navigator.py  loop.py  screen.py  sticky_window.py  text_input.py
src/riskmanager_cli/repl_engine/layout/: __init__.py  frame.py  overlay.py  responsive.py  stacks.py  table.py  tabpane.py  widgets.py
src/riskmanager_cli/schema/: __init__.py  create.py  update.py
src/riskmanager_cli/service/: __init__.py  dmta_service.py  structure_viewer.py
src/riskmanager_cli/utils/: __init__.py  component_graph_layout.py  console_formatting.py  formula_parser.py  manufacturing_layout_engine.py  name_simplifier.py
stubs/rdkit/: __init__.pyi
stubs/rdkit/Chem/: __init__.pyi
tests/: conftest.py
tests/config/: __init__.py  test_settings.py
tests/model/: test_crud_mixin.py  test_severity.py
tests/operations/: test_augment.py  test_base_operations.py  test_component.py  test_display_name.py  test_library_aliases.py  test_manufacturing_process.py  test_material.py  test_project.py  test_seed.py  test_smiles.py  test_visualization.py
tests/repl/: test_admin_import.py  test_bootstrap.py  test_box.py  test_commands.py  test_component_renderer.py  test_context.py  test_controller_conformance.py  test_entity_management.py  test_frame.py  test_geometry.py  test_home_navigation.py  test_home_renderer.py  test_hotkeys.py  test_library_augment.py  test_library_home_renderer.py  test_library_navigation.py  test_library_renderer.py  test_list_navigator.py  test_overlay.py  test_project_renderer.py  test_responsive.py  test_risk_forms.py  test_risk_renderer.py  test_route_renderer.py  test_screen.py  test_sections.py  test_session_state.py  test_stacks.py  test_stage_navigation.py  test_stage_renderer.py  test_sticky_window.py  test_structure_hotkey.py  test_table.py  test_tables.py  test_tabpane.py  test_viewport.py  test_widgets.py
tests/repl_engine/: test_dispatch.py  test_frame.py  test_geometry.py  test_list_navigator.py  test_overlay.py  test_responsive.py  test_screen.py  test_stacks.py  test_sticky_window.py  test_table.py  test_tabpane.py  test_text_input.py  test_viewport.py  test_widgets.py
tests/service/: __init__.py  test_structure_viewer.py
tests/utils/: test_component_graph_layout.py  test_formula_parser.py  test_name_simplifier.py  test_parsing.py
