[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskmanager-cli"
version = "0.7.0"
description = "Interactive REPL shell for pharmaceutical manufacturing riskmanager data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.19.0",
    "blessed>=1.19.0",
    "colorama>=0.4.6",
    # dmta-cli is not on PyPI; install the bundled wheel:
    #   pip install lib/dmta_cli-0.1.1-py3-none-any.whl
    "dmta-cli>=0.1.1",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    # rdkit is reached only transitively (via dmta-cli), but its bundled stubs
    # ship a malformed rdchem.pyi:347 that breaks mypy; stubs/rdkit/ shadows it.
    # Keep this pin explicit so that shadow stays matched to the expected version.
    "rdkit>=2023.3.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "types-colorama",
]

[project.scripts]
riskmanager-cli = "riskmanager_cli.__main__:cli_main"
rmgr = "riskmanager_cli.__main__:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["riskmanager_cli*"]

[tool.setuptools.package-data]
# Ship the committed JSON reference libraries seeded into new databases on first run.
riskmanager_cli = ["data/seed/*.json"]

# ---------------------------------------------------------------------------
# Ruff — linter and formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E: pycodestyle errors
# F: pyflakes
# I: isort
# N: pep8-naming
# W: pycodestyle warnings
# UP: pyupgrade (enforce modern syntax)

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
# stubs/ directory provides local overrides for packages with broken bundled stubs.
# rdkit-stubs/Chem/rdchem.pyi:347 has a malformed signature (auto-generated bug);
# our stubs/rdkit/ shadow those broken stubs with minimal correct declarations.
# (https://github.com/kuelumbus/rdkit-pypi/issues — auto-generated stubs)
mypy_path = "stubs"
# No global ignore_errors or ignore_missing_imports — all suppressions must
# be inline with justification comment (see AGENTS.md)

[[tool.mypy.overrides]]
module = "rdkit.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
# No global message suppressions: every suppression is inline with a per-line
# justification (see AGENTS.md § Suppression Policy). R0801 (duplicate-code) was
# previously disabled wholesale; the operations layer now delegates its CRUD
# shapes to the generic_* helpers, so it is re-enabled with a raised similarity
# threshold (see [tool.pylint.similarities]) instead.
disable = []

[tool.pylint.similarities]
# R0801 is reported at the runner level and cannot be suppressed inline, so this
# threshold is the only available knob. Entity/screen modules still share short,
# intentional patterns (risk-table field maps, ContextFrame pushes, prompt
# builders) up to ~7 lines; a threshold of 8 lets those pass while still flagging
# larger copy-paste. Lower it again only after eliminating the shared blocks.
min-similarity-lines = 8

[tool.pylint.typecheck]
# rdkit.Chem members (MolFromSmiles, MolToSmiles, etc.) are implemented as
# C-extension attributes and are invisible to pylint's static introspection.
# Ignoring rdkit here prevents false-positive E1101 (no-member) errors; it is
# not a suppression of genuine errors — all rdkit usage is validated by tests.
ignored-modules = ["rdkit", "rdkit.Chem"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "asyncio: asyncio mark",
    "unit: unit tests (no database required)",
    "integration: integration tests (real SQLite in-memory session)",
]
